        Reviewed by Mitz.

http://bugs.webkit.org/show_bug.cgi?id=15380
        XPath: id('foo') doesn't resolve correctly

        Test: fast/xpath/id-simple.html

        * xml/XPathFunctions.cpp:
        (WebCore::XPath::FunId::evaluate): Fixed a logic error in id() parameter parsing.



Canonical link: https://commits.webkit.org/20492@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@26502 268f45cc-cd09-0410-ab3c-d52691b4dbfc